--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,18 @@ build
 *.cov
 *.delta
 *.cbi.*
+fuzz_output
+formula.smt2
+
+fuzz*
+*.out
+*.err
+simple0
+simple1
+branch0
+branch1
 
 # vim
 .*.swp
 .ycm_extra_conf.py
+compile_commands.json
