--- a/lab0/test/Makefile
+++ b/lab0/test/Makefile
@@ -3,7 +3,7 @@ TARGETS=simple0
 all: ${TARGETS}
 
 %: %.c
-	clang -emit-llvm -S -fno-discard-value-names -c -o $@.ll $< -g
+	clang -emit-llvm -S -fno-discard-value-names -c -o $@.ll $<
 	opt -load ../build/PrereqPass.so -Prereqs -S $@.ll -disable-output
 
 clean:
