--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -7,21 +7,32 @@ include(AddLLVM)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 
+option(USE_REFERENCE "Build with reference solution" OFF)
+
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS} include)
 link_directories(${LLVM_LIBRARY_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SRC_DIR}/reference)
 
-add_executable(fuzzer
-  src/Fuzzer.cpp
-  src/Mutate.cpp
+if (USE_REFERENCE)
+  message(STATUS "Use reference solution")
+  add_executable(fuzzer
+    src/Fuzzer.cpp
+    )
+  add_custom_target(Muatate ALL
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/reference/libMutate.so ${CMAKE_CURRENT_BINARY_DIR}/
   )
+  target_link_libraries(fuzzer Mutate)
+else (USE_REFERENCE)
+  add_executable(fuzzer
+    src/Fuzzer.cpp
+    src/Mutate.cpp
+    )
+endif (USE_REFERENCE)
 
-target_link_libraries(fuzzer Mutate)
+add_custom_target(Instrument ALL
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/reference/InstrumentPass.so ${CMAKE_CURRENT_BINARY_DIR}/
+  )
 
 add_library(runtime MODULE
   lib/runtime.c
   )
-
-add_custom_target(Muatate ALL
-  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/reference/* ${CMAKE_CURRENT_BINARY_DIR}/
-)
