--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -11,14 +11,14 @@ option(USE_REFERENCE "Build with reference solution" OFF)
 
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS} include)
-link_directories(${LLVM_LIBRARY_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SRC_DIR}/reference)
+link_directories(${LLVM_LIBRARY_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/reference)
 
 if (USE_REFERENCE)
   message(STATUS "Use reference solution")
   add_executable(fuzzer
     src/Fuzzer.cpp
     )
-  add_custom_target(Muatate ALL
+  add_custom_target(RefMutate ALL
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/reference/libMutate.so ${CMAKE_CURRENT_BINARY_DIR}/
   )
   target_link_libraries(fuzzer Mutate)
