--- a/lab5/CMakeLists.txt
+++ b/lab5/CMakeLists.txt
@@ -11,7 +11,7 @@ option(USE_REFERENCE "Build with reference solution" OFF)
 
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS} include)
-link_directories(${LLVM_LIBRARY_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SRC_DIR}/reference)
+link_directories(${LLVM_LIBRARY_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/reference)
 
 if (USE_REFERENCE)
   message(STATUS "Use reference solution")
