Added test cases for lab11

--- a/lab11/test/Makefile
+++ b/lab11/test/Makefile
@@ -1,6 +1,6 @@
 .PRECIOUS: %.ll %.instrumented.ll
 
-TARGETS=simple0 simple1
+TARGETS=simple0 simple1 infeasable branch0 branch1 branch2
 
 all: ${TARGETS}
 
